[metadata]
name = nspctl
version = attr: nspctl.__version__
author = Emre Eryilmaz
author_email = emre.eryilmaz@piesso.com
url = https://github.com/mofm/nspctl
description = management tool for systemd-nspawn containers
long_description = file:README.rst
keywords = nspawn, container, systemd, systemd-nspawn, systemd-container
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
scripts = scripts/nspctl
python_requires = >=3.8

[options.packages.find]
where = src